assignments/spring2021/HW4_97521306/Q4/gen/miniJavaParser.py
# Generated from E:/Compiler/HW4/Q4_2\miniJava.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class miniJavaParser ( Parser ):

    grammarFileName = "miniJava.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'{'", "'public'", "'static'", 
                     "'void'", "'main'", "'('", "'String'", "'['", "']'", 
                     "')'", "'}'", "'extends'", "';'", "','", "'return'", 
                     "'int'", "'boolean'", "'if'", "'else'", "'while'", 
                     "'System.out.println'", "'='", "'&&'", "'<'", "'+'", 
                     "'-'", "'*'", "'.'", "'length'", "'true'", "'false'", 
                     "'this'", "'new'", "'!'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "INTEGER_LITERAL", "IDENTIFIER", "Whitespace", "BlockComment", 
                      "LineComment", "Newline" ]

    RULE_program = 0
    RULE_mainClass = 1
    RULE_classDeclaration = 2
    RULE_varDeclaration = 3
    RULE_methodDeclaration = 4
    RULE_type = 5
    RULE_statement = 6
    RULE_expression = 7
    RULE_identifier = 8

    ruleNames =  [ "program", "mainClass", "classDeclaration", "varDeclaration", 
                   "methodDeclaration", "type", "statement", "expression", 
                   "identifier" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    INTEGER_LITERAL=36
    IDENTIFIER=37
    Whitespace=38
    BlockComment=39
    LineComment=40
    Newline=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mainClass(self):
            return self.getTypedRuleContext(miniJavaParser.MainClassContext,0)


        def EOF(self):
            return self.getToken(miniJavaParser.EOF, 0)

        def classDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniJavaParser.ClassDeclarationContext)
            else:
                return self.getTypedRuleContext(miniJavaParser.ClassDeclarationContext,i)


        def getRuleIndex(self):
            return miniJavaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = miniJavaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 18
            self.mainClass()
            self.state = 22
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==miniJavaParser.T__0:
                self.state = 19
                self.classDeclaration()
                self.state = 24
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 25
            self.match(miniJavaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainClassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniJavaParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(miniJavaParser.IdentifierContext,i)


        def statement(self):
            return self.getTypedRuleContext(miniJavaParser.StatementContext,0)


        def getRuleIndex(self):
            return miniJavaParser.RULE_mainClass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainClass" ):
                listener.enterMainClass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainClass" ):
                listener.exitMainClass(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainClass" ):
                return visitor.visitMainClass(self)
            else:
                return visitor.visitChildren(self)




    def mainClass(self):

        localctx = miniJavaParser.MainClassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_mainClass)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self.match(miniJavaParser.T__0)
            self.state = 28
            self.identifier()
            self.state = 29
            self.match(miniJavaParser.T__1)
            self.state = 30
            self.match(miniJavaParser.T__2)
            self.state = 31
            self.match(miniJavaParser.T__3)
            self.state = 32
            self.match(miniJavaParser.T__4)
            self.state = 33
            self.match(miniJavaParser.T__5)
            self.state = 34
            self.match(miniJavaParser.T__6)
            self.state = 35
            self.match(miniJavaParser.T__7)
            self.state = 36
            self.match(miniJavaParser.T__8)
            self.state = 37
            self.match(miniJavaParser.T__9)
            self.state = 38
            self.identifier()
            self.state = 39
            self.match(miniJavaParser.T__10)
            self.state = 40
            self.match(miniJavaParser.T__1)
            self.state = 41
            self.statement()
            self.state = 42
            self.match(miniJavaParser.T__11)
            self.state = 43
            self.match(miniJavaParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.id1 = None # IdentifierContext

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniJavaParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(miniJavaParser.IdentifierContext,i)


        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniJavaParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(miniJavaParser.VarDeclarationContext,i)


        def methodDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniJavaParser.MethodDeclarationContext)
            else:
                return self.getTypedRuleContext(miniJavaParser.MethodDeclarationContext,i)


        def getRuleIndex(self):
            return miniJavaParser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDeclaration" ):
                return visitor.visitClassDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classDeclaration(self):

        localctx = miniJavaParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(miniJavaParser.T__0)
            self.state = 46
            localctx.id1 = self.identifier()
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==miniJavaParser.T__12:
                self.state = 47
                self.match(miniJavaParser.T__12)
                self.state = 48
                self.identifier()


            self.state = 51
            self.match(miniJavaParser.T__1)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << miniJavaParser.T__16) | (1 << miniJavaParser.T__17) | (1 << miniJavaParser.IDENTIFIER))) != 0):
                self.state = 52
                self.varDeclaration()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==miniJavaParser.T__2:
                self.state = 58
                self.methodDeclaration()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 64
            self.match(miniJavaParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type(self):
            return self.getTypedRuleContext(miniJavaParser.TypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(miniJavaParser.IdentifierContext,0)


        def getRuleIndex(self):
            return miniJavaParser.RULE_varDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclaration" ):
                listener.enterVarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclaration" ):
                listener.exitVarDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclaration" ):
                return visitor.visitVarDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def varDeclaration(self):

        localctx = miniJavaParser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.type()
            self.state = 67
            self.identifier()
            self.state = 68
            self.match(miniJavaParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.id1 = None # IdentifierContext
            self.id2 = None # IdentifierContext
            self.id3 = None # IdentifierContext

        def type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniJavaParser.TypeContext)
            else:
                return self.getTypedRuleContext(miniJavaParser.TypeContext,i)


        def expression(self):
            return self.getTypedRuleContext(miniJavaParser.ExpressionContext,0)


        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniJavaParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(miniJavaParser.IdentifierContext,i)


        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniJavaParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(miniJavaParser.VarDeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniJavaParser.StatementContext)
            else:
                return self.getTypedRuleContext(miniJavaParser.StatementContext,i)


        def getRuleIndex(self):
            return miniJavaParser.RULE_methodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclaration" ):
                listener.enterMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclaration" ):
                listener.exitMethodDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDeclaration" ):
                return visitor.visitMethodDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def methodDeclaration(self):

        localctx = miniJavaParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(miniJavaParser.T__2)
            self.state = 71
            self.type()
            self.state = 72
            localctx.id1 = self.identifier()
            self.state = 73
            self.match(miniJavaParser.T__6)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << miniJavaParser.T__16) | (1 << miniJavaParser.T__17) | (1 << miniJavaParser.IDENTIFIER))) != 0):
                self.state = 74
                self.type()
                self.state = 75
                localctx.id2 = self.identifier()
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==miniJavaParser.T__14:
                    self.state = 76
                    self.match(miniJavaParser.T__14)
                    self.state = 77
                    self.type()
                    self.state = 78
                    localctx.id3 = self.identifier()
                    self.state = 84
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 87
            self.match(miniJavaParser.T__10)
            self.state = 88
            self.match(miniJavaParser.T__1)
            self.state = 92
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 89
                    self.varDeclaration() 
                self.state = 94
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << miniJavaParser.T__1) | (1 << miniJavaParser.T__18) | (1 << miniJavaParser.T__20) | (1 << miniJavaParser.T__21) | (1 << miniJavaParser.IDENTIFIER))) != 0):
                self.state = 95
                self.statement()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 101
            self.match(miniJavaParser.T__15)
            self.state = 102
            self.expression(0)
            self.state = 103
            self.match(miniJavaParser.T__13)
            self.state = 104
            self.match(miniJavaParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(miniJavaParser.IdentifierContext,0)


        def getRuleIndex(self):
            return miniJavaParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type(self):

        localctx = miniJavaParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type)
        try:
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.match(miniJavaParser.T__16)
                self.state = 107
                self.match(miniJavaParser.T__8)
                self.state = 108
                self.match(miniJavaParser.T__9)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.match(miniJavaParser.T__17)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.match(miniJavaParser.T__16)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 111
                self.identifier()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()


        def getRuleIndex(self):
            return miniJavaParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)
            self.value_attr = ctx.value_attr
            self.type_attr = ctx.type_attr



    class Statement_whileContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniJavaParser.StatementContext
            super().__init__(parser)
            self.st1 = None # StatementContext
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(miniJavaParser.ExpressionContext,0)

        def statement(self):
            return self.getTypedRuleContext(miniJavaParser.StatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement_while" ):
                listener.enterStatement_while(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement_while" ):
                listener.exitStatement_while(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement_while" ):
                return visitor.visitStatement_while(self)
            else:
                return visitor.visitChildren(self)


    class Statement_statementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniJavaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniJavaParser.StatementContext)
            else:
                return self.getTypedRuleContext(miniJavaParser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement_statement" ):
                listener.enterStatement_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement_statement" ):
                listener.exitStatement_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement_statement" ):
                return visitor.visitStatement_statement(self)
            else:
                return visitor.visitChildren(self)


    class Statement_value_assignmentContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniJavaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def identifier(self):
            return self.getTypedRuleContext(miniJavaParser.IdentifierContext,0)

        def expression(self):
            return self.getTypedRuleContext(miniJavaParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement_value_assignment" ):
                listener.enterStatement_value_assignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement_value_assignment" ):
                listener.exitStatement_value_assignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement_value_assignment" ):
                return visitor.visitStatement_value_assignment(self)
            else:
                return visitor.visitChildren(self)


    class Statement_printlnContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniJavaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(miniJavaParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement_println" ):
                listener.enterStatement_println(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement_println" ):
                listener.exitStatement_println(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement_println" ):
                return visitor.visitStatement_println(self)
            else:
                return visitor.visitChildren(self)


    class Statement_ifContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniJavaParser.StatementContext
            super().__init__(parser)
            self.st1 = None # StatementContext
            self.st2 = None # StatementContext
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(miniJavaParser.ExpressionContext,0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniJavaParser.StatementContext)
            else:
                return self.getTypedRuleContext(miniJavaParser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement_if" ):
                listener.enterStatement_if(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement_if" ):
                listener.exitStatement_if(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement_if" ):
                return visitor.visitStatement_if(self)
            else:
                return visitor.visitChildren(self)


    class Statement_array_cell_assignmentContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniJavaParser.StatementContext
            super().__init__(parser)
            self.e1 = None # ExpressionContext
            self.e2 = None # ExpressionContext
            self.copyFrom(ctx)

        def identifier(self):
            return self.getTypedRuleContext(miniJavaParser.IdentifierContext,0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniJavaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(miniJavaParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement_array_cell_assignment" ):
                listener.enterStatement_array_cell_assignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement_array_cell_assignment" ):
                listener.exitStatement_array_cell_assignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement_array_cell_assignment" ):
                return visitor.visitStatement_array_cell_assignment(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = miniJavaParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 155
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                localctx = miniJavaParser.Statement_statementContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.match(miniJavaParser.T__1)
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << miniJavaParser.T__1) | (1 << miniJavaParser.T__18) | (1 << miniJavaParser.T__20) | (1 << miniJavaParser.T__21) | (1 << miniJavaParser.IDENTIFIER))) != 0):
                    self.state = 115
                    self.statement()
                    self.state = 120
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 121
                self.match(miniJavaParser.T__11)
                pass

            elif la_ == 2:
                localctx = miniJavaParser.Statement_ifContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.match(miniJavaParser.T__18)
                self.state = 123
                self.match(miniJavaParser.T__6)
                self.state = 124
                self.expression(0)
                self.state = 125
                self.match(miniJavaParser.T__10)
                self.state = 126
                localctx.st1 = self.statement()
                self.state = 127
                self.match(miniJavaParser.T__19)
                self.state = 128
                localctx.st2 = self.statement()
                pass

            elif la_ == 3:
                localctx = miniJavaParser.Statement_whileContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 130
                self.match(miniJavaParser.T__20)
                self.state = 131
                self.match(miniJavaParser.T__6)
                self.state = 132
                self.expression(0)
                self.state = 133
                self.match(miniJavaParser.T__10)
                self.state = 134
                localctx.st1 = self.statement()
                pass

            elif la_ == 4:
                localctx = miniJavaParser.Statement_printlnContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 136
                self.match(miniJavaParser.T__21)
                self.state = 137
                self.match(miniJavaParser.T__6)
                self.state = 138
                self.expression(0)
                self.state = 139
                self.match(miniJavaParser.T__10)
                self.state = 140
                self.match(miniJavaParser.T__13)
                pass

            elif la_ == 5:
                localctx = miniJavaParser.Statement_value_assignmentContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 142
                self.identifier()
                self.state = 143
                self.match(miniJavaParser.T__22)
                self.state = 144
                self.expression(0)
                self.state = 145
                self.match(miniJavaParser.T__13)
                pass

            elif la_ == 6:
                localctx = miniJavaParser.Statement_array_cell_assignmentContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 147
                self.identifier()
                self.state = 148
                self.match(miniJavaParser.T__8)
                self.state = 149
                localctx.e1 = self.expression(0)
                self.state = 150
                self.match(miniJavaParser.T__9)
                self.state = 151
                self.match(miniJavaParser.T__22)
                self.state = 152
                localctx.e2 = self.expression(0)
                self.state = 153
                self.match(miniJavaParser.T__13)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()


        def getRuleIndex(self):
            return miniJavaParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)
            self.value_attr = ctx.value_attr
            self.type_attr = ctx.type_attr


    class Expression_notContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniJavaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(miniJavaParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression_not" ):
                listener.enterExpression_not(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression_not" ):
                listener.exitExpression_not(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression_not" ):
                return visitor.visitExpression_not(self)
            else:
                return visitor.visitChildren(self)


    class Expression_thisContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniJavaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression_this" ):
                listener.enterExpression_this(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression_this" ):
                listener.exitExpression_this(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression_this" ):
                return visitor.visitExpression_this(self)
            else:
                return visitor.visitChildren(self)


    class Expression_identifierContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniJavaParser.ExpressionContext
            super().__init__(parser)
            self.id = None # IdentifierContext
            self.copyFrom(ctx)

        def identifier(self):
            return self.getTypedRuleContext(miniJavaParser.IdentifierContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression_identifier" ):
                listener.enterExpression_identifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression_identifier" ):
                listener.exitExpression_identifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression_identifier" ):
                return visitor.visitExpression_identifier(self)
            else:
                return visitor.visitChildren(self)


    class Expression_array_declarationContext(ExpressionContext):
